--- a/zentao/css/subpage.css
+++ b/zentao/css/subpage.css
@@ -8,6 +8,7 @@ body:before {
   height: 10px;
   width: 100%;
   background-color: red;
-  box-shadow: rgba(0,0,0,.25) 0px 1px 6px 0px;
+  box-shadow: rgba(0,0,0,.20) 0px 1px 5px 0px;
+  z-index: 9999;
 }
 
