--- a/zentao/css/style.css
+++ b/zentao/css/style.css
@@ -41,6 +41,15 @@ input[type="color"]:focus
 
 button {outline:none}
 
+.text-muted {color: #929292}
+.small {font-size: 12px}
+.block-lines > div {display: inline-block; margin-right: 10px;}
+
+.pri {border-left: 5px solid #bbb}
+.pri-1 {border-left-color: #DD524D}
+.pri-2 {border-left-color: #ed9922}
+.pri-3 {border-left-color: #8A6DE9}
+
 .mui-title {height: 40px;}
 .mui-title > .mui-segmented-control {width: 50%; min-width: 200px}
 
@@ -50,11 +59,7 @@ button {outline:none}
 .btn-show-more.mui-btn-block:active {background-color: #ccc; color: #888}
 
 .mui-table-view-cell {background-image: none; border-bottom: 1px solid #ddd}
-.mui-table-view-cell.pri {border-left: 5px solid #bbb}
-.mui-table-view-cell.pri-1 {border-left-color: #DD524D}
-.mui-table-view-cell.pri-2 {border-left-color: #ed9922}
-.mui-table-view-cell.pri-3 {border-left-color: #8A6DE9}
-.list-item-id {border: 1px solid #bbb; display: inline-block; margin-right: 5px; padding: 0 2px; font-size: 12px; line-height: 18px; color: #666; border-radius: 2px}
+.list-item-id {border: 1px solid #bbb; display: inline-block; margin-right: 5px; padding: 0 2px; font-size: 12px; line-height: 18px; color: #666; border-radius: 2px; min-width: 20px; text-align: center;}
 
 .mui-slider-progress-bar + .mui-slider-group, .mui-slider-header + .mui-slider-group{border-top: 1px solid #ddd}
 .mui-slider-header {position: fixed; top: 0; left: 0; right: 0; z-index: 5; background: #EFEFF4; border-bottom: 1px solid #ddd}
