--- a/zentao/css/dialog.css
+++ b/zentao/css/dialog.css
@@ -1,16 +1,18 @@
 .dialog {position: relative; display: block; max-height: inherit;}
-.dialog > header {position: relative; background: #f1f1f1; padding: 10px; border-bottom: 1px solid #e5e5e5;}
+.dialog > header {position: relative; background: #f1f1f1; padding: 5px 10px; border-bottom: 1px solid #e5e5e5;}
 
-.dialog > header.pri {border-left: none; border-top: 6px solid #bbb}
-.dialog > header.pri-1 {border-left: none; border-top-color: #DD524D}
-.dialog > header.pri-2 {border-left: none; border-top-color: #ed9922}
-.dialog > header.pri-3 {border-left: none; border-top-color: #8A6DE9}
-.dialog > header > .pri-icon {position: absolute; right: 10px; top: 15px; font-size: 12px; background-color: #bbb; color: #666; padding: 0 5px 0 5px; border-radius: 15px; text-align: center; min-width: 22px; display: none}
-.dialog > header > .pri-icon.pri-1 {color: #fff; background: #DD524D}
-.dialog > header > .pri-icon.pri-2 {color: #fff; background: #ed9922}
-.dialog > header > .pri-icon.pri-3 {color: #fff; background: #8A6DE9}
+.dialog > header.pri {border-left: none; border-top: 6px solid #bbb; border: 0; background-color: #666; color: #fff}
+.dialog > header.pri-1 {border-left: none; border-top-color: #DD524D; background-color: #DD524D}
+.dialog > header.pri-2 {border-left: none; border-top-color: #ed9922; background-color: #ed9922}
+.dialog > header.pri-3 {border-left: none; border-top-color: #8A6DE9; background-color: #8A6DE9}
+.dialog > header .pri-icon {position: absolute; right: 10px; top: 15px; font-size: 12px; background-color: #bbb; color: #666; padding: 0 5px 0 5px; border-radius: 15px; text-align: center; min-width: 22px; display: none}
+.dialog > header .pri-icon.pri-1 {color: #fff; background: #DD524D}
+.dialog > header .pri-icon.pri-2 {color: #fff; background: #ed9922}
+.dialog > header .pri-icon.pri-3 {color: #fff; background: #8A6DE9}
 
-.dialog > header .item-id {border: 1px solid #bbb; display: inline-block; margin-right: 2px; padding: 1px 3px; font-size: 14px; line-height: 20px; color: #666; border-radius: 2px; min-width: 24px; text-align: center; background: #fff; vertical-align: top;}
+.dialog > header.pri .text-muted {color: #fff; opacity: 0.7}
+
+.dialog > header .item-id {border: 1px solid #bbb; display: inline-block; margin-right: 2px; padding: 0 3px; font-size: 14px; line-height: 20px; color: #666; border-radius: 2px; min-width: 24px; text-align: center; background: #fff; vertical-align: top;}
 .dialog > header .item-id.pri {background: #999; color: #fff; border-color: #fff;}
 .dialog > header .item-id.pri.pri-1 {background: #DD524D;}
 .dialog > header .item-id.pri.pri-2 {background: #ed9922;}
@@ -23,3 +25,9 @@
 
 .dialog > footer {position: fixed; bottom: 0; left: 0; right: 0; background-color: #fff}
 .dialog.with-footer {padding-bottom: 87px;}
+
+.dialog-title {display: table; width: 100%}
+.dialog-title-left, .dialog-title-center, .dialog-title-right {display: table-cell;}
+.dialog-title-left {width: 1%}
+.dialog-title-right {text-align: right;}
+.dialog-title-center {padding: 5px}
