--- a/zentao/css/style.css
+++ b/zentao/css/style.css
@@ -59,6 +59,8 @@ button {outline:none}
 .btn-show-more.mui-btn-block:active {background-color: #ccc; color: #888}
 
 .mui-table-view-cell {background-image: none; border-bottom: 1px solid #ddd}
+.mui-table-view-cell.pri {padding-left: 10px;}
+.mui-table-view-cell > .list-title {  overflow: hidden; text-overflow: ellipsis; white-space: nowrap; display: block; padding-right: 50px;}
 .mui-table-view-cell.unread {background: #FCF8E3}
 .list-item-id {border: 1px solid #bbb; display: inline-block; margin-right: 5px; padding: 0 2px; font-size: 12px; line-height: 18px; color: #666; border-radius: 2px; min-width: 20px; text-align: center;}
 
@@ -134,35 +136,6 @@ body,#content
           transform: scale(3);
 }
 
-/* #login */
-#login
-{
-  margin: auto;
-  background: #0475e1;
-}
-#login.show
-{
-  display: flex;
-}
-#login > div
-{
-  padding-bottom: 140px;
-  margin: auto;
-}
-#login .logo img
-{
-  max-width: 100%;
-}
-#loginForm
-{
-  max-width: 400px;
-  margin: 0 auto;
-}
-#loginForm > .mui-input-group
-{
-  margin-bottom: 20px;
-}
-#loginForm .mui-btn-primary
-{
-  background: #2694ff
-}
+/* tab bar */
+.mui-bar .mui-tab-item {height: 60px}
+.mui-bar {box-shadow: inset 0 1px 0 #ddd}
