--- a/zui/src/less/zui.m.less
+++ b/zui/src/less/zui.m.less
@@ -11,20 +11,20 @@
 @import "type.less";
 
 // Components
-// @import "buttons.scss";
-// @import "bars.scss";
-// @import "badges.scss";
-// @import "cards.scss";
-// @import "table-views.scss";
-// @import "forms.scss";
-// @import "segmented-controls.scss";
-// @import "popovers.scss";
+@import "buttons.less";
+// @import "bars.less";
+// @import "badges.less";
+// @import "cards.less";
+// @import "table-views.less";
+// @import "forms.less";
+// @import "segmented-controls.less";
+// @import "popovers.less";
 
 // // Javascript components
-// @import "modals.scss";
-// @import "sliders.scss";
-// @import "toggles.scss";
-// @import "push.scss";
+// @import "modals.less";
+// @import "sliders.less";
+// @import "toggles.less";
+// @import "push.less";
 
 // // Ratchicons
-// @import "ratchicons.scss";
+// @import "ratchicons.less";
