--- a/zui/src/less/zui.m.less
+++ b/zui/src/less/zui.m.less
@@ -12,8 +12,8 @@
 
 // Components
 @import "buttons.less";
-// @import "bars.less";
-// @import "badges.less";
+@import "bars.less";
+@import "badges.less";
 // @import "cards.less";
 // @import "table-views.less";
 // @import "forms.less";
