+ added zenicon fonts and less file then rebuilt zui.

--- a/zui/src/less/zui.m.less
+++ b/zui/src/less/zui.m.less
@@ -26,5 +26,5 @@
 // @import "toggles.less";
 // @import "push.less";
 
-// // Ratchicons
-// @import "ratchicons.less";
+// icons
+@import "icons.less";
