--- a/zentao/css/style.css
+++ b/zentao/css/style.css
@@ -1,44 +1,4 @@
 /* global style */
-/*select,
-textarea,
-input[type="text"],
-input[type="search"],
-input[type="password"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="week"],
-input[type="number"],
-input[type="email"],
-input[type="url"],
-input[type="tel"],q
-input[type="color"] 
-{
-  border-radius: 1px;
-  background-color: rgba(255,255,255,.88);
-}
-select:focus,
-textarea:focus,
-input[type="text"]:focus,
-input[type="search"]:focus,
-input[type="password"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="time"]:focus,
-input[type="week"]:focus,
-input[type="number"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="tel"]:focus,
-input[type="color"]:focus
-{
-  background-color: #fff
-}
-
 button {outline:none}*/
 
 .text-muted {color: #929292}
@@ -181,3 +141,7 @@ body,#content
 /* tab bar */
 .mui-bar .mui-tab-item {height: 60px}
 .mui-bar {box-shadow: inset 0 1px 0 #ddd}
+
+
+.title {text-align: left; padding-left: 10px;}
+.bar > .btn-link > .icon {display: inline-block; min-width: 44px; padding: 0px; position: relative; top: 7px; font-size: 30px; line-height: 30px;text-align: center;}
