--- a/zui/src/less/zui.m.less
+++ b/zui/src/less/zui.m.less
@@ -16,7 +16,7 @@
 @import "badges.less";
 // @import "cards.less";
 // @import "table-views.less";
-// @import "forms.less";
+@import "forms.less";
 // @import "segmented-controls.less";
 // @import "popovers.less";
 
