+ added some components and rebuilt them.
include: slider,segmented-controller,table-view.

--- a/zui/src/less/zui.m.less
+++ b/zui/src/less/zui.m.less
@@ -15,14 +15,14 @@
 @import "bars.less";
 @import "badges.less";
 // @import "cards.less";
-// @import "table-views.less";
+@import "table-views.less";
 @import "forms.less";
-// @import "segmented-controls.less";
+@import "segmented-controls.less";
 // @import "popovers.less";
 
 // // Javascript components
 // @import "modals.less";
-// @import "sliders.less";
+@import "sliders.less";
 // @import "toggles.less";
 // @import "push.less";
 
