* fixed errors in table-views.less and rebuilt zui.

--- a/zui/src/less/table-views.less
+++ b/zui/src/less/table-views.less
@@ -86,7 +86,7 @@
     position: absolute;
     top: 50%;
     right: 15px;
-    @include transform(translateY(-50%));
+    .transform(translateY(-50%));
   }
 
   // If the cell has a chevron, give some more room.
