--- a/zentao/css/style.css
+++ b/zentao/css/style.css
@@ -1,8 +1,4 @@
 /* global style */
-button {outline:none}*/
-
-.text-muted {color: #929292}
-.small {font-size: 14px}
 .block-lines > div {display: inline-block; margin-right: 15px;}
 
 .article-content-plain
@@ -21,7 +17,7 @@ button {outline:none}*/
   margin: 0 !important;
 }
 .article-content-plain h1,
-.article-content-plain h2,
+.article-content-plain h2,mj
 .article-content-plain h3,
 .article-content-plain h4,
 .article-content-plain h5,
@@ -42,19 +38,12 @@ button {outline:none}*/
 .pri-2 {border-left-color: #ed9922}
 .pri-3 {border-left-color: #8A6DE9}
 
-.mui-title {height: 40px; text-align: left;}
-.mui-title > .mui-segmented-control {width: 50%; min-width: 200px}
-.mui-title .fa {font-size: 20px}
-.mui-bar .mui-title {left: 10px;}
-
 .headbar {display: table; width: 100%; box-shadow: rgba(0,0,0,.20) 0px 1px 5px 0px !important; background-color: #EFEFF4}
 .headbar .bar-heading, .headbar .bar-actions {display: table-cell;}
 .headbar .bar-heading {font-size: 17px; font-weight: normal; margin: 0; padding: 0;}
 .headbar .bar-actions {text-align: right;}
 .headbar .bar-actions > a, .headbar .bar-actions > .btn {display: inline-block; padding: 10px}
 .headbar .mui-btn-link {padding: 0 10px}
-
-.mui-content-padded {margin: 10px}
 
 .btn-show-more.mui-btn-block {background-color: #f1f1f1; font-size: 15px; color: #999}
 .btn-show-more.mui-btn-block:active {background-color: #ccc; color: #888}
@@ -73,7 +62,7 @@ button {outline:none}*/
 .dialog.fixed {position: fixed; left: 0; right: 0; background-color: #fff; display: none; transition: opacity .15s, height .15s, top .1s; padding: 0; z-index: 10; max-height: 100%}
 .dialog-header {display: table; background-color: rgba(255,255,255, .35); padding-bottom: 35px; width: 100%}
 .dialog-header > .list-title {font-weight: bold; font-size: 18px}
-.dialog-header > .mui-icon, .dialog-header > .list-title {display: table-cell;}
+.dialog-header > .mui-icon, .dialog-header > .list-title {display: tabe-cell;}
 .dialog-header > .mui-icon {width: 35px;}
 .dialog-header > .mui-badge {top: auto; bottom: 0px; right: auto; left: 50px}
 .dialog-footer {position: fixed; bottom: 0; width: 100%; background-color: #fff;}
@@ -128,20 +117,9 @@ body,#content
   z-index: 10;
 }
 
-/* animations */
-/*.zoom-out
-{
-  transition: all .5s ease-out;
-  opacity: 0;
-  -webkit-transform: scale(3);
-      -ms-transform: scale(3);
-          transform: scale(3);
-}*/
-
 /* tab bar */
 .mui-bar .mui-tab-item {height: 60px}
 .mui-bar {box-shadow: inset 0 1px 0 #ddd}
-
 
 .title {text-align: left; padding-left: 10px;}
 .bar > .btn-link > .icon {display: inline-block; min-width: 44px; padding: 0px; position: relative; top: 7px; font-size: 30px; line-height: 30px;text-align: center;}
