--- a/zentao/css/subpage.css
+++ b/zentao/css/subpage.css
@@ -1,4 +1,5 @@
-body:before {
+body:before
+{
   position: fixed;
   top: -10px;
   left: 0;
@@ -11,5 +12,7 @@ body:before {
   box-shadow: rgba(0,0,0,.20) 0px 1px 5px 0px;
   z-index: 9999;
 }
+body {background: #EFEFF4;}
 
-
+.table-view {border-top: none}
+.table-view:empty {display: none}
