* fixed style of icon in bar titie and rebuilt zui.

--- a/zui/src/less/bars.less
+++ b/zui/src/less/bars.less
@@ -208,6 +208,8 @@
   // Handle carets in the titles
   .title .icon {
     padding: 0;
+    position: relative;
+    top: 2px;
 
     // Specific postioning of the caret icon within a title. Used with popover.js.
     &.icon-caret {
