+ added toggle component.

--- a/zui/src/less/zui.m.less
+++ b/zui/src/less/zui.m.less
@@ -23,7 +23,7 @@
 // // Javascript components
 // @import "modals.less";
 @import "sliders.less";
-// @import "toggles.less";
+@import "toggles.less";
 // @import "push.less";
 
 // icons
