+ fixed style of pulrefresh component.

--- a/zui/src/less/zui.m.less
+++ b/zui/src/less/zui.m.less
@@ -25,6 +25,7 @@
 @import "sliders.less";
 @import "toggles.less";
 // @import "push.less";
+@import "pullrefresh.less";
 
 // icons
 @import "icons.less";
