--- a/zui/src/less/pullrefresh.less
+++ b/zui/src/less/pullrefresh.less
@@ -8,5 +8,6 @@ body.plus-pullrefresh
         left: auto;
         bottom: auto;
         right: auto;
+        background-color: transparent;
     }
 }
