--- a/zui/src/less/sliders.less
+++ b/zui/src/less/sliders.less
@@ -25,6 +25,8 @@
       height: 100%;
       font-size: 14px;
       vertical-align: top; // Ensure that li always aligns to top
+
+      .table-view {font-size: 17px;}
     }
   }
 }
