--- a/zui/src/less/table-views.less
+++ b/zui/src/less/table-views.less
@@ -7,7 +7,7 @@
   margin-top: 0;
   margin-bottom: 15px;
   list-style: none; // Remove usual bullet styles from table view
-  background-color: #fff;
+  background-color: transparent;
   border-top: @border-default;
   border-bottom: @border-default;
 }
@@ -17,6 +17,7 @@
   position: relative;
   padding: 11px 65px 11px 15px;
   overflow: hidden;
+  background-color: #fff;
   border-bottom: @border-default;
 
   // Remove the border from the last table view item
