--- a/zentao/css/style.css
+++ b/zentao/css/style.css
@@ -120,3 +120,7 @@ body,#content
 .table-view-cell.show-more, .table-view-cell.nomore-tip {text-align: center; color: #808080; background: #eee; padding-right: 10px; font-size: 14px;}
 .table-view-cell.show-more .icon {position: relative; top: 0px; border: none}
 .table-view-cell.show-more > a {margin: -11px 0}
+
+.table-view-cell.unread {background-color: #fcf8e3}
+
+.segmented-control .control-item .badge {padding: 2px 5px 3px}
