* ajusted style of table-view.

--- a/zui/src/less/table-views.less
+++ b/zui/src/less/table-views.less
@@ -20,6 +20,12 @@
   background-color: #fff;
   border-bottom: @border-default;
 
+  > a
+  {
+     text-overflow : ellipsis;
+      white-space:nowrap;
+  }
+
   // Remove the border from the last table view item
   &:last-child {
     border-bottom: 0;
