* ajusted style of badge in segment control nav.

--- a/zentao/css/style.css
+++ b/zentao/css/style.css
@@ -123,4 +123,4 @@ body,#content
 
 .table-view-cell.unread {background-color: #fcf8e3}
 
-.segmented-control .control-item .badge {padding: 1px 4px}
+.segmented-control .control-item .badge {padding: 1px 4px; position: relative; top: -1px;}
