* added logo image to the title bar.  * ajusted primary color and rebuilt m.zui.

--- a/zui/src/less/bars.less
+++ b/zui/src/less/bars.less
@@ -68,6 +68,15 @@
   color: #000;
   text-align: center;
   white-space: nowrap;
+
+  > img
+  {
+      width: 30px;
+      height: 30px;
+      position: relative;
+      top: 7px;
+      margin-right: 5px;
+  }
 }
 // Retain specified title color
 .title a {
