--- a/zui/src/less/variables.less
+++ b/zui/src/less/variables.less
@@ -16,7 +16,8 @@
 // --------------------------------------------------
 
 // Main theme colors
-@primary-color: #428bca;
+// @primary-color: #428bca; // old color
+@primary-color: #2d81e5;
 @chrome-color:  #fff;
 
 // Action colors
