* ajusted primary color and rebuilt m.zui.

--- a/zui/src/less/variables.less
+++ b/zui/src/less/variables.less
@@ -17,7 +17,7 @@
 
 // Main theme colors
 // @primary-color: #428bca; // old color
-@primary-color: #2d81e5;
+@primary-color: #007bc6;
 @chrome-color:  #fff;
 
 // Action colors
