* ajusted badges colors and rebult mzui.

--- a/zui/src/less/variables.less
+++ b/zui/src/less/variables.less
@@ -5,11 +5,11 @@
 
 // Type
 // --------------------------------------------------
-@font-family-default: "Helvetica Neue", Helvetica, sans-serif;
-@font-size-default: 17px;
-@font-weight: 500;
-@font-weight-light: 400;
-@line-height-default: 21px;
+@font-family-default : "Helvetica Neue", Helvetica, sans-serif;
+@font-size-default   : 17px;
+@font-weight         : 500;
+@font-weight-light   : 400;
+@line-height-default : 21px;
 
 
 // Colors
@@ -17,13 +17,15 @@
 
 // Main theme colors
 // @primary-color: #428bca; // old color
-@primary-color: #007bc6;
-@chrome-color:  #fff;
+@primary-color : #007bc6;
+@chrome-color  :  #fff;
 
 // Action colors
-@default-color:  #fff;
-@positive-color: #5cb85c;
-@negative-color: #d9534f;
+@default-color  :  #fff;
+@positive-color : #5cb85c;
+@negative-color : #d9534f;
+@warning-color  : #ed9922;
+@purple-color   : #8A6DE9;
 
 
 // Bars
