--- a/zui/src/less/badges.less
+++ b/zui/src/less/badges.less
@@ -33,7 +33,7 @@
 }
 
 // Positive badge
-.badge-positive {
+.badge-positive, .badge-success {
   color: #fff;
   background-color: @positive-color;
 
@@ -43,11 +43,31 @@
 }
 
 // Negative badge
-.badge-negative {
+.badge-negative, .badge-danger {
   color: #fff;
   background-color: @negative-color;
 
   &.badge-inverted {
     color: @negative-color;
+  }
+}
+
+// warning badge
+.badge-warning {
+  color: #fff;
+  background-color: @warning-color;
+
+  &.badge-inverted {
+    color: @warning-color;
+  }
+}
+
+// purple badge
+.badge-purple {
+  color: #fff;
+  background-color: @purple-color;
+
+  &.badge-inverted {
+    color: @purple-color;
   }
 }
